welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not enough arguments for method apply: (index: Int)Char in class StringOps.
Unspecified value parameter index.
	{litMessage()}
                   ^BDRBuggle:7: error: type mismatch;
 found   : String("R")
 required: Boolean
if ("R") 
    ^BDRBuggle:9: error: type mismatch;
 found   : String("L")
 required: Boolean
if ("L")
    ^BDRBuggle:11: error: type mismatch;
 found   : String("I")
 required: Boolean
if ("I")
    ^BDRBuggle:13: error: type mismatch;
 found   : String("A")
 required: Boolean
if ("A")
    ^BDRBuggle:15: error: type mismatch;
 found   : String("B")
 required: Boolean
if ("B")
    ^BDRBuggle:17: error: type mismatch;
 found   : String("C")
 required: Boolean
if ("C")
    ^BDRBuggle:19: error: type mismatch;
 found   : String("Z")
 required: Boolean
if ("Z")
    ^BDRBuggle:21: error: type mismatch;
 found   : String("Y")
 required: Boolean
if ("Y")
    ^BDRBuggle:23: error: type mismatch;
 found   : String("X")
 required: Boolean
if ("X")
    ^